--- a/.env
+++ b/.env
@@ -23,3 +23,6 @@ DB_URL=jdbc:postgresql://postgres:5432/postgres
 GRAPH_STORE_URI=bolt://neo4j:7687
 GRAPH_STORE_USER=neo4j
 GRAPH_STORE_PASSWORD=12345
+
+## Hashicorp Vault
+VAULT_ROOT_TOKEN=test-token
