--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,10 +124,7 @@ services:
       dockerfile: Dockerfile
     environment:
       SPRING_DATASOURCE_URL: "jdbc:h2:file:/data/database.db"
-    ports:
-      - "8086:8086"
-    networks:
-      - "gaia-x"
+    network_mode: "host"  
     volumes:
       - ./docker_data/contract-orchestrator/data:/data
 
@@ -138,10 +135,7 @@ services:
       dockerfile: Dockerfile
     environment:
       SPRING_DATASOURCE_URL: "jdbc:h2:file:/data/database.db"
-    ports:
-      - "8084:8084"
-    networks:
-      - "gaia-x"
+    network_mode: "host"  
     volumes:
       - ./docker_data/serviceoffering-orchestrator/data:/data
 
@@ -150,20 +144,14 @@ services:
     build:
       context: ../organisations-orchestrator
       dockerfile: Dockerfile
-    ports:
-      - "8082:8082"
-    networks:
-      - "gaia-x"
+    network_mode: "host"  
  
   aaam-orchestrator:
     container_name: "aaam-orchestrator"
     build:
       context: ../aaam-orchestrator
       dockerfile: Dockerfile
-    ports:
-      - "8083:8083"
-    networks:
-      - "gaia-x"
+    network_mode: "host"  
     
    
     
