--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,8 +156,15 @@ services:
       dockerfile: Dockerfile
     network_mode: "host"  
     
-   
-    
+  marketplace:
+    container_name: "marketplace"
+    build:
+      context: ../marketplace
+      dockerfile: Dockerfile
+    ports:
+      - "4200:80"
+    networks:
+      - "gaia-x"
 
 
 networks:
