--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,7 @@ services:
     depends_on:
       - postgres
       - neo4j
+      - keycloak
 
   keycloak:
     user: "${UID}:${GID}"
@@ -141,6 +142,8 @@ services:
     network_mode: "host"  
     volumes:
       - ./docker_data/contract-orchestrator/data:/data
+    depends_on:
+      - keycloak
 
   serviceoffering-orchestrator:
     user: "${UID}:${GID}"
@@ -154,6 +157,8 @@ services:
     network_mode: "host"  
     volumes:
       - ./docker_data/serviceoffering-orchestrator/data:/data
+    depends_on:
+      - keycloak
 
   organisations-orchestrator:
     user: "${UID}:${GID}"
@@ -167,6 +172,8 @@ services:
     network_mode: "host"  
     volumes:
       - ./docker_data/organisations-orchestrator/data:/data
+    depends_on:
+      - keycloak
  
   aaam-orchestrator:
     user: "${UID}:${GID}"
@@ -175,6 +182,8 @@ services:
       context: ../aaam-orchestrator
       dockerfile: Dockerfile
     network_mode: "host"  
+    depends_on:
+      - keycloak
     
   marketplace:
     user: "${UID}:${GID}"
