--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,9 +82,12 @@ services:
       - "localhost:127.0.0.1"
     restart: on-failure
     depends_on:
-      - postgres
-      - neo4j
-      - keycloak
+      postgres:
+        condition: service_healthy
+      neo4j:
+        condition: service_healthy
+      keycloak:
+        condition: service_healthy
 
   keycloak:
     user: "${UID}:${GID}"
@@ -143,7 +146,8 @@ services:
     volumes:
       - ./docker_data/contract-orchestrator/data:/data
     depends_on:
-      - keycloak
+      keycloak:
+        condition: service_healthy
 
   serviceoffering-orchestrator:
     user: "${UID}:${GID}"
@@ -158,7 +162,8 @@ services:
     volumes:
       - ./docker_data/serviceoffering-orchestrator/data:/data
     depends_on:
-      - keycloak
+      keycloak:
+        condition: service_healthy
 
   organisations-orchestrator:
     user: "${UID}:${GID}"
@@ -173,7 +178,8 @@ services:
     volumes:
       - ./docker_data/organisations-orchestrator/data:/data
     depends_on:
-      - keycloak
+      keycloak:
+        condition: service_healthy
  
   aaam-orchestrator:
     user: "${UID}:${GID}"
@@ -183,7 +189,8 @@ services:
       dockerfile: Dockerfile
     network_mode: "host"  
     depends_on:
-      - keycloak
+      keycloak:
+        condition: service_healthy
     
   marketplace:
     user: "${UID}:${GID}"
