--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ services:
       neo4j:
         condition: service_healthy
       keycloak:
-        condition: service_healthy
+        condition: service_completed_successfully
 
   keycloak:
     user: "${UID}:${GID}"
@@ -147,7 +147,7 @@ services:
       - ./docker_data/contract-orchestrator/data:/data
     depends_on:
       keycloak:
-        condition: service_healthy
+        condition: service_completed_successfully
 
   serviceoffering-orchestrator:
     user: "${UID}:${GID}"
@@ -163,7 +163,7 @@ services:
       - ./docker_data/serviceoffering-orchestrator/data:/data
     depends_on:
       keycloak:
-        condition: service_healthy
+        condition: service_completed_successfully
 
   organisations-orchestrator:
     user: "${UID}:${GID}"
@@ -179,7 +179,7 @@ services:
       - ./docker_data/organisations-orchestrator/data:/data
     depends_on:
       keycloak:
-        condition: service_healthy
+        condition: service_completed_successfully
  
   aaam-orchestrator:
     user: "${UID}:${GID}"
@@ -190,7 +190,7 @@ services:
     network_mode: "host"  
     depends_on:
       keycloak:
-        condition: service_healthy
+        condition: service_completed_successfully
     
   marketplace:
     user: "${UID}:${GID}"
