--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   vault:
     user: "${UID}:${GID}"
     container_name: "vault"
+    hostname: vault
     image: vault:1.9.7
     restart: on-failure
     environment:
@@ -17,10 +18,24 @@ services:
     volumes:
       - ./docker_data/vault/file:/vault/file
       - ./docker_data/vault/logs:/vault/logs
+      
+  pgadmin:
+    container_name: pgadmin
+    hostname: pgadmin
+    image: dpage/pgadmin4
+    restart: on-failure
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.admin
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    networks:
+      - "gaia-x"
 
   postgres:
     user: "${UID}:${GID}"
     container_name: "postgres_merlot"
+    hostname: postgres
     image: postgres:15
     restart: on-failure
     environment:
@@ -44,14 +59,15 @@ services:
   neo4j:
     user: "${UID}:${GID}"
     container_name: "neo4j_merlot"
-    image: neo4j:4.4.12
+    hostname: neo4j
+    image: neo4j:5.7.0
     environment:
       NEO4J_AUTH: "${GRAPH_STORE_USER}/${GRAPH_STORE_PASSWORD}"
       NEO4J_dbms_connector_http_listen__address: :7474
       NEO4J_dbms_connector_bolt_listen__address: :7687
       NEO4JLABS_PLUGINS: '["apoc", "graph-data-science", "n10s"]'
-      NEO4J_dbms_security_procedures_unrestricted: gds.*,apoc.*,n10s.*
-      NEO4J_dbms_security_procedures_allowlist: gds.*,apoc.*,n10s.*
+      NEO4J_dbms_security_procedures_unrestricted: gds.*,apoc.*,n10s.*,semantics.*
+      NEO4J_dbms_security_procedures_allowlist: gds.*,apoc.*,n10s.*,semantics.*
     healthcheck:
       test: wget http://localhost:7474 || exit 1
       interval: 1s
@@ -72,6 +88,7 @@ services:
   server:
     user: "${UID}:${GID}"
     container_name: "fc-server_merlot"
+    hostname: fc-server
     image: ghcr.io/merlot-education/gxfs-catalog:latest
     environment:
       KEYCLOAK_CREDENTIALS_SECRET: "${FC_CLIENT_SECRET}"
@@ -89,7 +106,6 @@ services:
     networks:
       - "gaia-x"
     extra_hosts:
-      - "key-server:host-gateway"
       - "localhost:127.0.0.1"
     restart: on-failure
     depends_on:
@@ -103,6 +119,7 @@ services:
   keycloak:
     user: "${UID}:${GID}"
     container_name: "keycloak_merlot"
+    hostname: key-server
     environment:
       KEYCLOAK_ADMIN: "admin"
       KEYCLOAK_ADMIN_PASSWORD: "admin"
@@ -110,6 +127,8 @@ services:
     image: "quay.io/keycloak/keycloak:20.0.5"
     ports:
       - "8080:8080"
+    networks:
+      - "gaia-x"
     restart: on-failure
     healthcheck:
       test: ["CMD", "curl", "--head", "http://localhost:8080/health/ready"]
@@ -122,10 +141,12 @@ services:
       ]
     volumes:
       - ./docker_data/keycloak/data:/opt/keycloak/data
+      - ./docker_data/keycloak/providers:/opt/keycloak/providers
 
   rabbitmq:
     user: "${UID}:${GID}"
     container_name: "rabbitmq_merlot"
+    hostname: rabbitmq
     image: rabbitmq:3-management
     environment:
       RABBITMQ_DEFAULT_USER: "admin"
@@ -136,24 +157,25 @@ services:
     networks:
       - "gaia-x"
     restart: on-failure
-    hostname: rabbitmq-merlot
     volumes:
       - ./docker_data/rabbitmq:/var/lib/rabbitmq
 
   sd-creation-wizard-api:
     user: "${UID}:${GID}"
     container_name: "sd-creation-wizard-api"
+    hostname: wizard
     build:
       context: ../sd-creation-wizard-api
       dockerfile: Dockerfile
-    ports:
-      - "8085:8080"
     networks:
       - "gaia-x"
+    ports:
+      - "8085:8080"
 
   contract-orchestrator:
     user: "${UID}:${GID}"
     container_name: "contract-orchestrator"
+    hostname: contract-orchestrator
     build:
       context: ../contract-orchestrator
       dockerfile: Dockerfile
@@ -161,7 +183,13 @@ services:
         - "GIT_AUTH_TOKEN"
     environment:
       SPRING_DATASOURCE_URL: "jdbc:h2:file:/data/database.db"
-    network_mode: "host"
+      SPRING_RABBITMQ_HOST: "rabbitmq"
+      ORGANIZATIONSORCHESTRATOR_BASEURI: "http://organisations-orchestrator:8082/api"
+      SERVICEOFFERING_BASEURI: "http://serviceoffering-orchestrator:8084/api"
+    networks:
+      - "gaia-x"
+    ports:
+      - "8086:8086"
     volumes:
       - ./docker_data/contract-orchestrator/data:/data
     depends_on:
@@ -171,6 +199,7 @@ services:
   serviceoffering-orchestrator:
     user: "${UID}:${GID}"
     container_name: "serviceoffering-orchestrator"
+    hostname: serviceoffering-orchestrator
     build:
       context: ../serviceoffering-orchestrator
       dockerfile: Dockerfile
@@ -178,8 +207,15 @@ services:
         - "GIT_AUTH_TOKEN"
     environment:
       SPRING_DATASOURCE_URL: "jdbc:h2:file:/data/database.db"
+      SPRING_RABBITMQ_HOST: "rabbitmq"
+      GXFSCATALOG_BASEURI: "http://fc-server:8081"
+      GXFSWIZARD_BASEURI: "http://wizard:8080"
+      ORGANIZATIONSORCHESTRATOR_BASEURI: "http://organisations-orchestrator:8082/api"
       KEYCLOAK_CLIENTSECRET: "${FC_CLIENT_SECRET}"
-    network_mode: "host"
+    networks:
+      - "gaia-x"
+    ports:
+      - "8084:8084"
     volumes:
       - ./docker_data/serviceoffering-orchestrator/data:/data
     depends_on:
@@ -189,6 +225,7 @@ services:
   organisations-orchestrator:
     user: "${UID}:${GID}"
     container_name: "organisations-orchestrator"
+    hostname: organisations-orchestrator
     build:
       context: ../organisations-orchestrator
       dockerfile: Dockerfile
@@ -196,8 +233,14 @@ services:
         - "GIT_AUTH_TOKEN"
     environment:
       SPRING_DATASOURCE_URL: "jdbc:h2:file:/data/database.db"
+      SPRING_RABBITMQ_HOST: "rabbitmq"
+      GXFSCATALOG_BASEURI: "http://fc-server:8081"
+      GXFSWIZARD_BASEURI: "http://wizard:8080"
       KEYCLOAK_CLIENTSECRET: "${FC_CLIENT_SECRET}"
-    network_mode: "host"
+    networks:
+      - "gaia-x"
+    ports:
+      - "8082:8082"
     volumes:
       - ./docker_data/organisations-orchestrator/data:/data
     depends_on:
@@ -207,12 +250,16 @@ services:
   aaam-orchestrator:
     user: "${UID}:${GID}"
     container_name: "aaam-orchestrator"
+    hostname: aaam-orchestrator
     build:
       context: ../aaam-orchestrator
       dockerfile: Dockerfile
       secrets:
         - "GIT_AUTH_TOKEN"
-    network_mode: "host"
+    networks:
+      - "gaia-x"
+    ports:
+      - "8083:8083"
     depends_on:
       keycloak:
         condition: service_healthy
