revert neo4j version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,14 +60,14 @@ services:
     user: "${UID}:${GID}"
     container_name: "neo4j_merlot"
     hostname: neo4j
-    image: neo4j:5.7.0
+    image: neo4j:4.4.12
     environment:
       NEO4J_AUTH: "${GRAPH_STORE_USER}/${GRAPH_STORE_PASSWORD}"
       NEO4J_dbms_connector_http_listen__address: :7474
       NEO4J_dbms_connector_bolt_listen__address: :7687
       NEO4JLABS_PLUGINS: '["apoc", "graph-data-science", "n10s"]'
-      NEO4J_dbms_security_procedures_unrestricted: gds.*,apoc.*,n10s.*,semantics.*
-      NEO4J_dbms_security_procedures_allowlist: gds.*,apoc.*,n10s.*,semantics.*
+      NEO4J_dbms_security_procedures_unrestricted: gds.*,apoc.*,n10s.*
+      NEO4J_dbms_security_procedures_allowlist: gds.*,apoc.*,n10s.*
     healthcheck:
       test: wget http://localhost:7474 || exit 1
       interval: 1s
