--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -220,6 +220,8 @@ services:
       secrets:
         - "GIT_AUTH_TOKEN"
     environment:
+      INITDATA_ORGANISATIONS: /opt/initdata/organisations/
+      INITDATA_CONNECTORS: /opt/initdata/initial-orga-connectors.json
       SPRING_DATASOURCE_URL: "jdbc:h2:file:/data/database.db"
       SPRING_RABBITMQ_HOST: "localhost"
       GXFSCATALOG_BASEURI: "http://localhost:8081"
@@ -237,18 +239,18 @@ services:
         condition: service_started
     network_mode: "host"
 
-  aaam-orchestrator:
-    user: "${UID}:${GID}"
-    container_name: "aaam-orchestrator"
-    build:
-      context: ../aaam-orchestrator
-      dockerfile: Dockerfile
-      secrets:
-        - "GIT_AUTH_TOKEN"
-    depends_on:
-      keycloak:
-        condition: service_healthy
-    network_mode: "host"
+  #aaam-orchestrator:
+  #  user: "${UID}:${GID}"
+  #  container_name: "aaam-orchestrator"
+  #  build:
+  #    context: ../aaam-orchestrator
+  #    dockerfile: Dockerfile
+  #    secrets:
+  #      - "GIT_AUTH_TOKEN"
+  #  depends_on:
+  #    keycloak:
+  #      condition: service_healthy
+  #  network_mode: "host"
 
   marketplace:
     user: "${UID}:${GID}"
@@ -270,7 +272,62 @@ services:
     networks:
       - "gaia-x"
     ports:
-      - "5154:5154"
+      - "5154:8080"
+  
+  edc1:
+    container_name: "edc1"
+    build:
+      context: ../merlot-edc
+      dockerfile: Dockerfile
+      secrets:
+        - "GIT_AUTH_TOKEN"
+    environment:
+      WEB_HTTP_PORT: 29191
+      WEB_HTTP_PATH: /api
+      WEB_HTTP_MANAGEMENT_PORT: 29193
+      WEB_HTTP_MANAGEMENT_PATH: /management
+      WEB_HTTP_PROTOCOL_PORT: 29194
+      WEB_HTTP_PROTOCOL_PATH: /protocol
+      WEB_HTTP_PUBLIC_PORT: 29291
+      WEB_HTTP_PUBLIC_PATH: /public
+      WEB_HTTP_CONTROL_PORT: 29192
+      WEB_HTTP_CONTROL_PATH: /control
+      EDC_PARTICIPANT_ID: edc1
+      EDC_DSP_CALLBACK_ADDRESS: http://localhost:8123/edc1/protocol
+      EDC_API_AUTH_KEY: 1234
+    env_file: "secrets/edc_ionos_secrets.txt"
+    network_mode: "host"
+
+  edc2:
+    container_name: "edc2"
+    build:
+      context: ../merlot-edc
+      dockerfile: Dockerfile
+      secrets:
+        - "GIT_AUTH_TOKEN"
+    environment:
+      WEB_HTTP_PORT: 19191
+      WEB_HTTP_PATH: /api
+      WEB_HTTP_MANAGEMENT_PORT: 19193
+      WEB_HTTP_MANAGEMENT_PATH: /management
+      WEB_HTTP_PROTOCOL_PORT: 19194
+      WEB_HTTP_PROTOCOL_PATH: /protocol
+      WEB_HTTP_PUBLIC_PORT: 19291
+      WEB_HTTP_PUBLIC_PATH: /public
+      WEB_HTTP_CONTROL_PORT: 19192
+      WEB_HTTP_CONTROL_PATH: /control
+      EDC_PARTICIPANT_ID: edc2
+      EDC_DSP_CALLBACK_ADDRESS: http://localhost:8123/edc2/protocol
+      EDC_API_AUTH_KEY: 5678
+    env_file: "secrets/edc_ionos_secrets.txt"
+    network_mode: "host"
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    volumes:
+      - ./docker_data/nginx/reverse_proxy.conf:/etc/nginx/nginx.conf
+    network_mode: "host"
 
 networks:
   gaia-x:
