--- a/.env
+++ b/.env
@@ -17,10 +17,10 @@ ISSUER_URI=http://key-server:8080/realms/gxfscatalog
 #DB_NAME=public    
 DB_USER=postgres
 DB_PASS=postgres
-DB_URL=jdbc:postgresql://postgres:5432/postgres
+DB_URL=jdbc:postgresql://localhost:5432/postgres
 
 ### GRAPH STORE PROPERTIES ###
-GRAPH_STORE_URI=bolt://neo4j:7687
+GRAPH_STORE_URI=bolt://localhost:7687
 GRAPH_STORE_USER=neo4j
 GRAPH_STORE_PASSWORD=neo12345
 
