update postgres initialization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,16 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.admin
       PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: 'False'
+    volumes:
+      - ./initial_data/pgadmin/servers.json:/pgadmin4/servers.json:ro
+    entrypoint: >
+      /bin/sh -c '
+      echo "postgres:5432:postgres:postgres:postgres" > /tmp/pgpass;
+      chmod 600 /tmp/pgpass;
+      /entrypoint.sh
+      '
     ports:
       - "5050:80"
     networks:
@@ -53,6 +63,7 @@ services:
       - "gaia-x"
     volumes:
       - ./docker_data/postgres/data:/var/lib/postgresql/data
+      - ./initial_data/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   neo4j:
     user: "${UID}:${GID}"
